<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <android.support.v7.widget.RecyclerView
        android:id="@+id/wordsList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/placeholder_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/camera_big"
        android:text="@string/category_empty"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:textSize="20dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/placeholder_new_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/thumb_up"
        android:text="@string/tutor_new_empty"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:textSize="20dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/placeholder_learn_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/camera_big"
        android:text="@string/tutor_know_empty"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:textSize="20dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/placeholder_know_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/arrow_left_thick"
        android:text="@string/tutor_learn_empty"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:textSize="20dp"
        android:visibility="gone"/>

</RelativeLayout>
